# skysurvey

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  dependencies.txt  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests.yml
docs/: builtin_transients.ipynb  conf.py  index.rst  installation.rst  requirements.txt  skysurvey.dataset.rst  skysurvey.effects.core.rst  skysurvey.effects.hostdust.rst  skysurvey.effects.milkyway.rst  skysurvey.effects.rst  skysurvey.effects.scatter.rst  skysurvey.lcfit.fit_salt.rst  skysurvey.lcfit.rst  skysurvey.lcfit.sncutils.rst  skysurvey.lightcurves.rst  skysurvey.rst  skysurvey.source.angular.rst  skysurvey.source.rst  skysurvey.survey.basesurvey.rst  skysurvey.survey.core.rst  skysurvey.survey.des.rst  skysurvey.survey.healpix.rst  skysurvey.survey.lsst.rst  skysurvey.survey.polygon.rst  skysurvey.survey.roman.rst  skysurvey.survey.rst  skysurvey.survey.snls.rst  skysurvey.survey.ztf.rst  skysurvey.target.afterglow.rst  skysurvey.target.collection.rst  skysurvey.target.core.rst  skysurvey.target.host.rst  skysurvey.target.kilonova.rst  skysurvey.target.rates.rst  skysurvey.target.rst  skysurvey.target.sncc.rst  skysurvey.target.snia.rst  skysurvey.target.stars.rst  skysurvey.target.timeserie.rst  skysurvey.template.rst  (+7 more)
docs/advanced/: build_a_new_model.ipynb  build_a_new_transient.ipynb  index.rst
docs/analysisexamples/: index.rst  ztf_volumelimited_rates.ipynb
docs/howto/: add_mwebv.ipynb  blackbody_transient.ipynb  build_a_new_transient.ipynb  change_model_while_draw.ipynb  change_rate.ipynb  create_new_transient_class.ipynb  draw_and_from_draw.ipynb  index.rst  load_lsst.ipynb  noise_to_target.ipynb  radec_in_survey.ipynb  target_and_skyarea.ipynb
docs/notebooks/: quickstart_survey.ipynb  quickstart_survey_target_dataset.ipynb  quickstart_target.ipynb
docs/quickstart/: index.rst  quickstart_survey.ipynb  quickstart_survey_target_dataset.ipynb  quickstart_target.ipynb
docs/transientclasses/: index.rst  kilonovae.ipynb  sne_cc.ipynb  sne_ia.ipynb
skysurvey/: __init__.py  config.py  dag.py  dataset.py  lightcurves.py  template.py
skysurvey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skysurvey/effects/: __init__.py  core.py  dust.py  milkyway.py  scatter.py
skysurvey/examples/: mocksurvey.py
skysurvey/lcfit/: __init__.py  fit_salt.py  sncutils.py
skysurvey/sampling/: __init__.py  color.py  coordinates.py  core.py  hostmass.py  magnitude.py  stretch.py
skysurvey/source/: __init__.py  angular.py
skysurvey/survey/: __init__.py  basesurvey.py  core.py  des.py  healpix.py  lsst.py  lsst_comcam.py  polygon.py  roman.py  snls.py  survey.py  ztf.py
skysurvey/survey/.ipynb_checkpoints/: __init__-checkpoint.py  lsst_comcam-checkpoint.py
skysurvey/tools/: __init__.py  blackbody.py  projection.py  snana.py  speedutils.py  stats.py  utils.py
src/skysurvey/: __init__.py  config.py  dataset.py  lightcurves.py  template.py
src/skysurvey/effects/: __init__.py  core.py  hostdust.py  milkyway.py  scatter.py
src/skysurvey/examples/: __init__.py  mocksurvey.py
src/skysurvey/lcfit/: fit_salt.py  sncutils.py
src/skysurvey/source/: __init__.py  angular.py
src/skysurvey/survey/: basesurvey.py  core.py  des.py  healpix.py  lsst.py  polygon.py  roman.py  snls.py  ztf.py
src/skysurvey/tools/: blackbody.py  projection.py  snana.py  speedutils.py  stats.py  utils.py
tests/: test_config.py  test_dataset.py
tests/.ipynb_checkpoints/: test_lsst_comcam-checkpoint.py
tests/data/: dp1_visits-ECDFS_EDFS_Fornax_LELF.parquet  dp1_visits.parquet
tests/effects/: test_core.py  test_hostdust.py  test_milkyway.py  test_scatter.py
tests/lcfit/: test_fit_salt.py  test_sncutils.py
tests/source/: test_angular.py
tests/tools/: test_blackbody.py  test_projection.py  test_speedutils.py  test_stats.py
