[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "skysurvey"
description = "Simulating Transient in the sky and how to observe them"
authors = [
    {name = "Mickael Rigault", email = "m.rigault@ipnl.in2p3.fr"},
]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["astronomy", "astrophysics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    # basic
    "numpy >=1.26", # np.random.default_rng()
    "pandas",
    "scipy",
    # surface management
    "healpy",
    "shapely",
    "geopandas",
    # Astro
    "astropy",
    "sncosmo",
    "dustmaps",
    "extinction",
    # internal
    "modeldag>=0.11.0",
    "ztffields>=0.4.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/MickaelRigault/skysurvey"

[project.optional-dependencies]
docs = [
    "matplotlib",
    "myst-nb",
    "nbsphinx",
    "numpydoc",
    "pandas-sphinx",
    "sphinx-book-theme",
    "sphinx_copybutton",
    "sphinx-design",
]
tests = ["pytest", "coverage"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["skysurvey*"]

[tool.setuptools.package-data]
skysurvey = ["data/*"]

[tool.setuptools.dynamic]
version = {attr = "skysurvey.__version__"}

[tool.ruff.lint]
select = [
  "E", "F", # flake8
  # "W",      # flake8 warnings
  # "I",      # isort
  # "UP",     # pyupgrade
  "NPY",         # numpy
]
ignore = [
  "E501",  # line-too-long
]
unfixable = [
  "F841", # Removes unused variables
]

[tool.ruff.lint.isort]
known-first-party = ["skysurvey"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # action:message:category:module:lineno
    # "error",
    # "ignore:.*Call to deprecated Parameter testval.*:DeprecationWarning:pymc3",
]

[tool.coverage.run]
source = ["skysurvey"]
omit = ["tests/*"]

# [tool.coverage.paths]
# source = ["skysurvey", "*/site-packages"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover", # Have to re-enable the standard pragma
  "except ImportError", # Don't complain about packages we have installed
  "raise AssertionError", # Don't complain if tests don't hit assertion code
  "raise NotImplementedError",
  "'def main(.*):'", # Don't complain about script hooks
  "if __name__ == .__main__.:",
  "def _ipython_key_completions_", # Don't complain about IPython completion
]
