[metadata]
name = skysurvey
version = attr: skysurvey.__version__
description = Simulating Transient in the sky and how to observe them
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mickael Rigault
author_email = m.rigault@ipnl.in2p3.fr
license = Apache Software License
license_files = LICENSE
url = https://github.com/MickaelRigault/skysurvey
keywords = astronomy, astrophysics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    importlib_resources; python_version < '3.10'  # not needed from 3.10

    # basic
    numpy
    pandas
    scipy

    # surface management
    healpy
    shapely
    geopandas
    
    # Astro
    astropy
    sncosmo
    extinction
    
    # internal
    modeldag>=0.9.3
    ztffields>=0.4.3


[options.package_data]
skysurvey = data/*

[options.extras_require]
docs = nbsphinx
tests = pytest; coverage

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
